// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsContainer applies theme colors correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Tabs
    screenOptions={
      {
        "headerShown": false,
        "tabBarActiveTintColor": "#007AFF",
        "tabBarInactiveTintColor": "#8E8E93",
        "tabBarStyle": {
          "backgroundColor": "#F2F2F7",
          "borderTopColor": "#C6C6C8",
        },
      }
    }
  >
    <TabsScreen
      name="index"
      options={
        {
          "href": null,
          "tabBarIcon": [Function],
          "title": "Extensions",
        }
      }
    />
    <TabsScreen
      name="extensions/[id]"
      options={
        {
          "href": "/extensions/test-extension-id",
          "tabBarIcon": [Function],
          "title": "Extension",
        }
      }
    />
    <TabsScreen
      name="build"
      options={
        {
          "tabBarIcon": [Function],
          "title": "Build Info",
        }
      }
    />
    <TabsScreen
      name="server"
      options={
        {
          "tabBarIcon": [Function],
          "title": "Server Info",
        }
      }
    />
  </Tabs>
</View>
`;

exports[`TabsContainer renders all tab screens with correct titles and icons 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Tabs
    screenOptions={
      {
        "headerShown": false,
        "tabBarActiveTintColor": "#007AFF",
        "tabBarInactiveTintColor": "#8E8E93",
        "tabBarStyle": {
          "backgroundColor": "#F2F2F7",
          "borderTopColor": "#C6C6C8",
        },
      }
    }
  >
    <TabsScreen
      name="index"
      options={
        {
          "href": null,
          "tabBarIcon": [Function],
          "title": "Extensions",
        }
      }
    />
    <TabsScreen
      name="extensions/[id]"
      options={
        {
          "href": "/extensions/test-extension-id",
          "tabBarIcon": [Function],
          "title": "Extension",
        }
      }
    />
    <TabsScreen
      name="build"
      options={
        {
          "tabBarIcon": [Function],
          "title": "Build Info",
        }
      }
    />
    <TabsScreen
      name="server"
      options={
        {
          "tabBarIcon": [Function],
          "title": "Server Info",
        }
      }
    />
  </Tabs>
</View>
`;

exports[`TabsContainer renders when no current extension ID is set 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Tabs
    screenOptions={
      {
        "headerShown": false,
        "tabBarActiveTintColor": "#007AFF",
        "tabBarInactiveTintColor": "#8E8E93",
        "tabBarStyle": {
          "backgroundColor": "#F2F2F7",
          "borderTopColor": "#C6C6C8",
        },
      }
    }
  >
    <TabsScreen
      name="index"
      options={
        {
          "href": null,
          "tabBarIcon": [Function],
          "title": "Extensions",
        }
      }
    />
    <TabsScreen
      name="extensions/[id]"
      options={
        {
          "href": null,
          "tabBarIcon": [Function],
          "title": "Extension",
        }
      }
    />
    <TabsScreen
      name="build"
      options={
        {
          "tabBarIcon": [Function],
          "title": "Build Info",
        }
      }
    />
    <TabsScreen
      name="server"
      options={
        {
          "tabBarIcon": [Function],
          "title": "Server Info",
        }
      }
    />
  </Tabs>
</View>
`;

exports[`TabsContainer renders when on extension detail page 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Tabs
    screenOptions={
      {
        "headerShown": false,
        "tabBarActiveTintColor": "#007AFF",
        "tabBarInactiveTintColor": "#8E8E93",
        "tabBarStyle": {
          "backgroundColor": "#F2F2F7",
          "borderTopColor": "#C6C6C8",
        },
      }
    }
  >
    <TabsScreen
      name="index"
      options={
        {
          "href": "/",
          "tabBarIcon": [Function],
          "title": "Extensions",
        }
      }
    />
    <TabsScreen
      name="extensions/[id]"
      options={
        {
          "href": null,
          "tabBarIcon": [Function],
          "title": "Extension",
        }
      }
    />
    <TabsScreen
      name="build"
      options={
        {
          "tabBarIcon": [Function],
          "title": "Build Info",
        }
      }
    />
    <TabsScreen
      name="server"
      options={
        {
          "tabBarIcon": [Function],
          "title": "Server Info",
        }
      }
    />
  </Tabs>
</View>
`;

exports[`TabsContainer renders with current extension ID 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Tabs
    screenOptions={
      {
        "headerShown": false,
        "tabBarActiveTintColor": "#007AFF",
        "tabBarInactiveTintColor": "#8E8E93",
        "tabBarStyle": {
          "backgroundColor": "#F2F2F7",
          "borderTopColor": "#C6C6C8",
        },
      }
    }
  >
    <TabsScreen
      name="index"
      options={
        {
          "href": null,
          "tabBarIcon": [Function],
          "title": "Extensions",
        }
      }
    />
    <TabsScreen
      name="extensions/[id]"
      options={
        {
          "href": "/extensions/my-extension-123",
          "tabBarIcon": [Function],
          "title": "Extension",
        }
      }
    />
    <TabsScreen
      name="build"
      options={
        {
          "tabBarIcon": [Function],
          "title": "Build Info",
        }
      }
    />
    <TabsScreen
      name="server"
      options={
        {
          "tabBarIcon": [Function],
          "title": "Server Info",
        }
      }
    />
  </Tabs>
</View>
`;

exports[`TabsContainer renders with default state 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Tabs
    screenOptions={
      {
        "headerShown": false,
        "tabBarActiveTintColor": "#007AFF",
        "tabBarInactiveTintColor": "#8E8E93",
        "tabBarStyle": {
          "backgroundColor": "#F2F2F7",
          "borderTopColor": "#C6C6C8",
        },
      }
    }
  >
    <TabsScreen
      name="index"
      options={
        {
          "href": null,
          "tabBarIcon": [Function],
          "title": "Extensions",
        }
      }
    />
    <TabsScreen
      name="extensions/[id]"
      options={
        {
          "href": "/extensions/test-extension-id",
          "tabBarIcon": [Function],
          "title": "Extension",
        }
      }
    />
    <TabsScreen
      name="build"
      options={
        {
          "tabBarIcon": [Function],
          "title": "Build Info",
        }
      }
    />
    <TabsScreen
      name="server"
      options={
        {
          "tabBarIcon": [Function],
          "title": "Server Info",
        }
      }
    />
  </Tabs>
</View>
`;
